--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     line-height: 1.6;
     height: 100vh;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     flex-direction: column;
     overflow-x: hidden;
@@ -20,55 +20,58 @@ body {
     padding-top: 100px;
 }
 
-/* Background */
+/* Animated Background */
 .background {
-    position: absolute;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(45deg, #1a1a1a, #333, #4d4d4d);
-    background-size: 400% 400%;
-    animation: gradient 10s ease infinite;
-    z-index: -1;
+    background: #0c0303;
+    overflow: hidden;
 }
 
 .background span {
+    width: 3vmin;
+    height: 3vmin;
+    border-radius: 3vmin;
+    backface-visibility: hidden;
     position: absolute;
-    display: block;
-    background-color: #3498db;
-    opacity: 0.6;
-    width: 2px;
-    height: 100%;
-    animation: move 5s linear infinite;
-    animation-delay: calc(0.1s * var(--i));
+    animation: move;
+    animation-duration: 38s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
 }
 
-.background span:nth-child(1) { left: 0; animation-delay: 0s; }
-.background span:nth-child(2) { left: 10%; animation-delay: 0.2s; }
-.background span:nth-child(3) { left: 20%; animation-delay: 0.4s; }
-.background span:nth-child(4) { left: 30%; animation-delay: 0.6s; }
-.background span:nth-child(5) { left: 40%; animation-delay: 0.8s; }
-.background span:nth-child(6) { left: 50%; animation-delay: 1s; }
-.background span:nth-child(7) { left: 60%; animation-delay: 1.2s; }
-.background span:nth-child(8) { left: 70%; animation-delay: 1.4s; }
-.background span:nth-child(9) { left: 80%; animation-delay: 1.6s; }
-.background span:nth-child(10) { left: 90%; animation-delay: 1.8s; }
-
-@keyframes gradient {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+.background span:nth-child(1) {
+    color: #49a43d;
+    top: 38%;
+    left: 1%;
+    animation-duration: 12s;
+    animation-delay: -112s;
+    transform-origin: -9vw -18vh;
+    box-shadow: -6vmin 0 1.5717764659285858vmin currentColor;
+}
+.background span:nth-child(2) {
+    color: #49a43d;
+    top: 29%;
+    left: 57%;
+    animation-duration: 33s;
+    animation-delay: -89s;
+    transform-origin: -4vw 8vh;
+    box-shadow: -6vmin 0 1.521644120278743vmin currentColor;
+}
+.background span:nth-child(3) {
+    color: #191028;
+    top: 9%;
+    left: 92%;
+    animation-duration: 50s;
+    animation-delay: -27s;
+    transform-origin: 10vw 17vh;
+    box-shadow: -6vmin 0 0.9934906089898881vmin currentColor;
 }
 
-@keyframes move {
-    0% {
-        transform: translateY(-100%);
-    }
-    100% {
-        transform: translateY(100%);
-    }
-}
+/* Add other span styles from your code... */
 
 /* Section */
 .section {
